browser.display.use_document_fonts is not respected
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox66 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | fixed |
People
(Reporter: st, Assigned: emilio)
References
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Start today's nightly (68.0a1 2019-03-19, Linux 64-bit) in a new profile:
mkdir -p /tmp/temp-profile
firefox -profile /tmp/temp-profile
Preferences → General → Language and Appearance → Advanced and untick "Allow webpages to choose their own fonts, instead of my selections above".
Navigate to https://bugzilla.mozilla.org/home
Actual results:
The "Welcome to Bugzilla" heading is set in Fira Sans, as chosen by the webpage.
Expected results:
The "Welcome to Bugzilla" heading should be set in DejaVu Serif, the default selection in the "Advanced" font-selection dialog.
Comment 1•7 years ago
|
||
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9ddb1a785c2e0967b0725295335640fa83a6dd80&tochange=e05dc78eb4272fff00d1aee1b1d629c0163ca343
Regressed by: e05dc78eb427 Emilio Cobos Álvarez — Bug 1534494 - Try to bring some more sanity into our font code. r=manishearth
emilio, Your patch seems to cause the regression. Can you please look into this?
| Assignee | ||
Comment 2•7 years ago
|
||
Yes, thanks Alice (and thanks for filing Screwtape).
We don't have test coverage for this pref looks like, will make sure to add a test to avoid regressing this in the future.
| Assignee | ||
Comment 4•7 years ago
|
||
I don't know if this is tested elsewhere, but one quirk of the use_display_fonts pref that I didn't see in the attached testcase is that it gets overruled for Unicode private-use-area glyphs, or possibly just for fonts that only contain PUA glyphs, since bug 789788 ("Not allowing pages to choose their own fonts breaks with icon fonts").
| Assignee | ||
Comment 6•7 years ago
|
||
Yeah, that's the "may still fall back to document fonts" test.
| Assignee | ||
Updated•7 years ago
|
Comment 9•7 years ago
|
||
| bugherder | ||
Comment 10•7 years ago
|
||
Issue only partially fixed ?
Start Nightly.
Select MS Gothic as default font.
In Advanced Options, select MS Gothic for Serif, Sans Serif and Monospace.
Untick "Allow pages to choose their own fonts, instead of your selections above".
Go to https://en.wikipedia.org/wiki/Main_Page and all is in MS Gothic.
Go to https://www.imdb.com/ and nothing is in MS Gothic.
Comment 11•7 years ago
|
||
OK
Has been fixed in latest version.
| Assignee | ||
Comment 12•7 years ago
|
||
Yeah, this patch wasn't in the nightly build you were testing. I made the same mistake when filing bug 1539428.
Description
•