Bug 1536718 - Honor browser.display.use_document_fonts again. r=manishearth,jwatt

Differential Revision: https://phabricator.services.mozilla.com/D24218